fix align?

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: 750px;
     margin-bottom: 40px;
 }
 
